--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -9,4 +9,14 @@ body {
 
 a:link, a:visited {
   text-decoration: none;
+  color: #616161;
+  font-weight: bold;
+}
+
+h2 {
+  margin: 0;
+}
+
+.container {
+  padding: 10px;
 }
